...
              component={InventoryScreen}
              options={{ tabBarLabel: 'Depo' }}
            />
            <Tab.Screen
              name="SalesTab"
              component={SalesScreen}
              options={{ tabBarLabel: 'Satış' }}
            />
            <Tab.Screen
              name="ProfileTab"
              component={ProfileScreen}
              options={{ tabBarLabel: 'Profil' }}
            />
          </Tab.Navigator>
        </View>
      </View>
    );
  }
...
